fix: 全面修复部署链路 - 多节点部署/定时部署/Agent进程管理/UI优化
- 修复多节点部署只部署第一个节点的bug，改为自动分发到全部节点
- 修复Agent ProcessController使用ProcessBuilder子进程被回收的问题，改为Runtime.exec
- 修复路径含空格导致cd命令失败的问题（引号包裹）
- 修复前端nodeIds类型不匹配导致下拉显示ID的问题
- 修复generateStopScript缺少闭合括号的TS编译错误
- 修复Vite代理未配置ws:true导致WebSocket连接失败
- 修复ConsoleHandler使用new创建实例导致Spring DI失效
- 重构Agent ProcessController：停止旧进程→传包→启动→健康检查完整流程
- 重构部署超时从30秒改为5分钟
- 统一前端时间显示格式为yyyy-MM-dd HH:mm:ss
- 菜单分类重组（运维核心/工具/监控/系统）
- 删除版本管理的重复部署按钮
- 增加定时部署取消功能、倒计时显示
- 应用表单简化：去掉JVM参数/环境变量/重启脚本，改为start.sh/stop.sh
- 一键填入模板直接生成start.sh（JVM参数内嵌）
- 新增AI配置页面、日志分析接口